--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".MediaPlayerActivity"/>
         <activity android:name=".MediaCodecMediaExtractorActivity"/>
+        <activity android:name=".ExoplayerActivity"/>
     </application>
 
 </manifest>
