解码器公共部分抽离出来，功能正常

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MediaPlayerActivity"/>
-        <activity android:name=".MediaCodecMediaExtractorActivity"/>
+        <activity android:name=".AVPlayerActivity"/>
         <activity android:name=".ExoplayerActivity"/>
         <activity android:name=".GLSurfaceViewActivity"/>
         <activity android:name=".GLPictureActivity"/>
