顶点坐标绝对值处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".FBOActivity"/>
         <activity android:name=".NDKPlayerActivity"/>
         <activity android:name=".WatermarkViewActivity"/>
+        <activity android:name=".GLPICROTATEActivity"/>
     </application>
 
 </manifest>
