--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".activity.NDKPlayerActivity"/>
         <activity android:name=".activity.WatermarkViewActivity"/>
         <activity android:name=".activity.GLPICROTATEActivity"/>
+        <activity android:name=".activity.LooperHandlerActivity"/>
     </application>
 
 </manifest>
