--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".activity.WatermarkViewActivity"/>
         <activity android:name=".activity.GLPICROTATEActivity"/>
         <activity android:name=".activity.LooperHandlerActivity"/>
+        <activity android:name=".activity.DesignPattenActivity"/>
     </application>
 
 </manifest>
